--- a/game.html
+++ b/game.html
@@ -9,6 +9,7 @@
   <script src="script.js"></script>
 </head>
 <body>
-<div id="player"></div>
+  <div id="player">person</div>
+  <div id="finish">finish</div>
 </body>
 </html>
