transformation random div

--- a/game.html
+++ b/game.html
@@ -12,5 +12,10 @@
   <div id="player">person</div>
   <div id="finish">finish</div>
   <div class="random"></div>
+  <div class="random"></div>
+  <div class="random"></div>
+  <div class="random"></div>
+  <div class="random"></div>
+  <div class="random"></div>
 </body>
 </html>
