checkpoints and lose/win decals

--- a/game.html
+++ b/game.html
@@ -10,12 +10,23 @@
 </head>
 <body>
   <div id="player">person</div>
-  <div id="finish">finish</div>
-  <div class="random"></div>
-  <div class="random"></div>
-  <div class="random"></div>
-  <div class="random"></div>
-  <div class="random"></div>
-  <div class="random"></div>
+  <div class="points" id="pt1">1</div>
+  <div class="points" id="pt2">2</div>
+  <div class="points" id="finish">finish</div>
+  <div class="random" id="enemy1">1</div>
+  <div class="random" id="enemy2">2</div>
+  <div class="random" id="enemy3">3</div>
+  <div class="random" id="enemy4">4</div>
+  <div class="random" id="enemy5">5</div>
+  <div class="random" id="enemy6">6</div>
+  <div class='mission'>
+    <p>Go to point 1</p>
+  </div>
+  <div class='win'>
+  <h3></h3>
+  </div>
+  <div class='lose'>
+  <h3></h3>
+  </div>
 </body>
 </html>
