style game, images

--- a/game.html
+++ b/game.html
@@ -9,18 +9,18 @@
   <script src="script.js"></script>
 </head>
 <body>
-  <div id="player">person</div>
-  <div class="points" id="pt1">1</div>
-  <div class="points" id="pt2">2</div>
-  <div class="points" id="finish">finish</div>
-  <div class="random" id="enemy1">1</div>
-  <div class="random" id="enemy2">2</div>
-  <div class="random" id="enemy3">3</div>
-  <div class="random" id="enemy4">4</div>
-  <div class="random" id="enemy5">5</div>
-  <div class="random" id="enemy6">6</div>
+  <div id="player"></div>
+  <div class="points" id="pt1"></div>
+  <div class="points" id="pt2"></div>
+  <div class="points" id="finish"></div>
+  <div class="random" id="enemy1"></div>
+  <div class="random" id="enemy2"></div>
+  <div class="random" id="enemy3"></div>
+  <div class="random" id="enemy4"></div>
+  <div class="random" id="enemy5"></div>
+  <div class="random" id="enemy6"></div>
   <div class='mission'>
-    <p>Go to point 1</p>
+    <p>Go Get Coffee</p>
   </div>
   <div class='win'>
   <h3></h3>
