--- a/game.html
+++ b/game.html
@@ -5,7 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title></title>
   <link rel="stylesheet" href="gamestyle.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> -->
+  <script src="jquerylocal.js"></script>
   <script src="script.js"></script>
 </head>
 <body>
@@ -24,9 +25,11 @@
   </div>
   <div class='win'>
   <h3></h3>
+  <button><a href="game.html" style="text-decoration:none">Play Again</a></button>
   </div>
   <div class='lose'>
   <h3></h3>
+  <button><a href="game.html" style="text-decoration:none">Try Again</a></button>
   </div>
 </body>
 </html>
