--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title></title>
   <link rel="stylesheet" href="style.css">
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> -->
+  <script src="jquerylocal.js"></script>
+  <script src="script.js"></script>
 </head>
 <body>
+<div class = "info">
+<!-- form goes here, wraps around the button -->
  <button><a href="game.html" style="text-decoration:none">Start</a></button>
+</div>
 </body>
 </html>
