--- a/index.html
+++ b/index.html
@@ -7,12 +7,33 @@
   <link rel="stylesheet" href="style.css">
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> -->
   <script src="jquerylocal.js"></script>
-  <script src="script.js"></script>
+  <script src="indexscript.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
 </head>
 <body>
+<div class="header">
+<h1>RACING THROUGH<br>TIMES SQUARE</h1>
+</div>
 <div class = "info">
+<p>fovhfd;vh;chasd;uchsau;fhaes;hca;chqlukcasyciuhcawieuh</p>
 <!-- form goes here, wraps around the button -->
  <button><a href="game.html" style="text-decoration:none">Start</a></button>
+</div>
+<div class="brief">
+<h2>AN ILLUSORY ADVENTURE THROUGH THE <br>STREETS OF NEW YORK CITY</h2>
+</div>
+<div class="buy">
+<img src="apple.png">
+<img src="google.png">
+<img src="kindle.png">
+<img src="window.png">
+</div>
+<div class='character'>
+<img src="coverman.png">
+</div>
+<div class = 'instruction'>
+  <p>PRESS ENTER TO CONTINUE</p>
 </div>
 </body>
 </html>
