--- a/game.html
+++ b/game.html
@@ -25,11 +25,11 @@
   </div>
   <div class='win'>
   <h3></h3>
-  <button><a href="game.html" style="text-decoration:none">Play Again</a></button>
+  <button><a href="index.html" style="text-decoration:none">Return To Landing Page</a></button>
   </div>
   <div class='lose'>
   <h3></h3>
-  <button><a href="game.html" style="text-decoration:none">Try Again</a></button>
+  <button><a href="index.html" style="text-decoration:none">Return To Landing Page</a></button>
   </div>
 </body>
 </html>
