--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
 <h1>RACING THROUGH<br>TIMES SQUARE</h1>
 </div>
 <div class = "info">
+<form action="game.html" method="get">
 <p>fovhfd;vh;chasd;uchsau;fhaes;hca;chqlukcasyciuhcawieuh</p>
-<!-- form goes here, wraps around the button -->
- <button><a href="game.html" style="text-decoration:none">Start</a></button>
+<input type="text" name="Username">
+<button type="start">START</button>
+<!--  <button><a href="game.html" style="text-decoration:none">Start</a></button>
+ --></form>
 </div>
 <div class="brief">
 <h2>AN ILLUSORY ADVENTURE THROUGH THE <br>STREETS OF NEW YORK CITY</h2>
