--- a/game.html
+++ b/game.html
@@ -23,6 +23,8 @@
   <div class='mission'>
     <p>Go Get Coffee</p>
   </div>
+  <div class = 'playerid'>
+  </div>
   <div class='win'>
   <h3></h3>
   <button><a href="index.html" style="text-decoration:none">Return To Landing Page</a></button>
