finishedgit add .! no readme yet tho

--- a/game.html
+++ b/game.html
@@ -1,37 +1,42 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title></title>
-  <link rel="stylesheet" href="gamestyle.css">
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> -->
-  <script src="jquerylocal.js"></script>
-  <script src="script.js"></script>
-</head>
-<body>
-  <div id="player"></div>
-  <div class="points" id="pt1"></div>
-  <div class="points" id="pt2"></div>
-  <div class="points" id="finish"></div>
-  <div class="random" id="enemy1"></div>
-  <div class="random" id="enemy2"></div>
-  <div class="random" id="enemy3"></div>
-  <div class="random" id="enemy4"></div>
-  <div class="random" id="enemy5"></div>
-  <div class="random" id="enemy6"></div>
-  <div class='mission'>
-    <p>Go Get Coffee</p>
-  </div>
-  <div class = 'playerid'>
-  </div>
-  <div class='win'>
-  <h3></h3>
-  <button><a href="index.html" style="text-decoration:none">Return To Landing Page</a></button>
-  </div>
-  <div class='lose'>
-  <h3></h3>
-  <button><a href="index.html" style="text-decoration:none">Return To Landing Page</a></button>
-  </div>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <link rel="stylesheet" href="gamestyle.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="script.js"></script>
+  </head>
+  <body>
+    <div id="player"></div>
+    <div class="points" id="pt1"></div>
+    <div class="points" id="pt2"></div>
+    <div class="points" id="finish"></div>
+    <div class="random" id="enemy1"></div>
+    <div class="random" id="enemy2"></div>
+    <div class="random" id="enemy3"></div>
+    <div class="random" id="enemy4"></div>
+    <div class="random" id="enemy5"></div>
+    <div class="random" id="enemy6"></div>
+    <div class='mission'>
+      <p>Go Get Coffee</p>
+    </div>
+    <div class = 'playerid'>
+    </div>
+    <div class='win'>
+    <div class= 'flex1'>
+     <h3></h3>
+     <h2>Press enter to play again</h2>
+     <button><a href="index.html" style="text-decoration:none">Return To Landing Page</a></button>
+    </div>
+    </div>
+    <div class='lose'>
+    <div class= 'flex'>
+     <h3></h3>
+     <h2>Press enter to try again</h2>
+     <button><a href="index.html" style="text-decoration:none">Return To Landing Page</a></button>
+    </div>
+    </div>
+  </body>
 </html>
