--- a/index.html
+++ b/index.html
@@ -1,42 +1,47 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title></title>
-  <link rel="stylesheet" href="style.css">
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> -->
-  <script src="jquerylocal.js"></script>
-  <script src="indexscript.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
-</head>
-<body>
-<div class="header">
-<h1>RACING THROUGH<br>TIMES SQUARE</h1>
-</div>
-<div class = "info">
-<form action="game.html" method="get">
-<p>fovhfd;vh;chasd;uchsau;fhaes;hca;chqlukcasyciuhcawieuh</p>
-<input type="text" name="Username">
-<button type="start">START</button>
-<!--  <button><a href="game.html" style="text-decoration:none">Start</a></button>
- --></form>
-</div>
-<div class="brief">
-<h2>AN ILLUSORY ADVENTURE THROUGH THE <br>STREETS OF NEW YORK CITY</h2>
-</div>
-<div class="buy">
-<img src="apple.png">
-<img src="google.png">
-<img src="kindle.png">
-<img src="window.png">
-</div>
-<div class='character'>
-<img src="coverman.png">
-</div>
-<div class = 'instruction'>
-  <p>PRESS ENTER TO CONTINUE</p>
-</div>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="indexscript.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
+  </head>
+  <body>
+    <div class="header">
+     <h1>RACING THROUGH<br>TIMES SQUARE</h1>
+    </div>
+    <div class = "info">
+     <form action="game.html" method="get">
+      <div id='ptag'>
+       <h3>DIRECTIONS</h3>
+       <p>USE ARROW KEYS TO MOVE YOUR CHARACTER AROUND TIMES SQUARE</p>
+       <br>
+       <p>COLLECT YOUR COFFEE THEN YOUR NEWSPAPER, WHILE AVOIDING TOURISTS ASKING FOR DIRECTIONS AND SUPERHERO'S TRYING TO MAKE YOU TAKE PICTURES WITH THEM! </p>
+       <br>
+       <p>WHEN FINISHED, RACE ACROSS TIMES SQUARE AND ESCAPE BY CROSSING THE FINISH LINE!!!</p>
+      </div>
+      Username: <input type="text" name="Username">
+      <button type="start">START</button>
+     </form>
+    </div>
+    <div class="brief">
+     <h2>AN ILLUSORY ADVENTURE THROUGH THE <br>STREETS OF NEW YORK CITY</h2>
+    </div>
+    <div class="buy">
+     <img src="apple.png">
+     <img src="google.png">
+     <img src="kindle.png">
+     <img src="window.png">
+    </div>
+    <div class='character'>
+     <img src="coverman.png">
+    </div>
+    <div class = 'instruction'>
+     <p>PRESS ENTER TO CONTINUE</p>
+    </div>
+  </body>
 </html>
